remove unnecessary renames